small UI fixes (a:hover), WebAPI unhandled exception logging

--- a/src/MSHU.CarWash.Web/app/views/day.html
+++ b/src/MSHU.CarWash.Web/app/views/day.html
@@ -7,106 +7,108 @@
             <strong>OPPS!&nbsp;</strong>{{error}}
         </div>
     </div>
-    <div class="row">
-        <div ng-click="showCalendar(dayDetailsViewModel.Offset);">
-            <div class="glyphicon glyphicon-arrow-left fa-2x col-xs-2 white text-left"></div>
-            <div class="fa-2x col-xs-8 white text-center">{{dayDetailsViewModel.MonthName}} {{dayDetailsViewModel.DayNumber}} - {{dayDetailsViewModel.DayName}}</div>
+    <div ng-show="(error == '')">
+        <div class="row">
+            <a href="" ng-click="showCalendar(dayDetailsViewModel.Offset);">
+                <div class="glyphicon glyphicon-arrow-left fa-2x col-xs-2 white text-left"></div>
+                <div class="fa-2x col-xs-8 white text-center">{{dayDetailsViewModel.MonthName}} {{dayDetailsViewModel.DayNumber}} - {{dayDetailsViewModel.DayName}}</div>
+            </a>
         </div>
-    </div>
-    <hr />
-    <div class="list-group">
-        <div class="list-group-item" data-ng-repeat="item in dayDetailsViewModel.Reservations">
-            <button class="pull-right btn btn-primary btn-sm" ng-show="item.IsDeletable" ng-click="deleteReservation(item.ReservationId);"><span class="glyphicon glyphicon-trash"></span>&nbsp;TÖRÖL</button>
-            <strong>{{item.VehiclePlateNumber}}&nbsp;&nbsp;{{item.EmployeeName}}</strong><br />
-            {{item.SelectedServiceName}}<br />
-            {{item.Comment}}&nbsp;
-        </div>
-    </div>
-    <p ng-show="showReservation()">
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            <span class="glyphicon glyphicon-plus"></span>&nbsp;IDŐPONT FOGLALÁS
-        </button>
-    </p>
-    <div class="collapse" id="collapseExample">
+        <hr />
         <div class="list-group">
-            <div class="list-group-item">
-                <form name="newReservationForm">
-                    <div class="form-group row hidden">
-                        <label for="inputEmployeeId" class="col-sm-2 form-control-label">EmployeeId</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmployeeId" name="inputEmployeeId" placeholder="EmployeeId" ng-model="dayDetailsViewModel.NewReservation.EmployeeId" ng-readonly="true" required>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputName" class="col-sm-2 form-control-label">NÉV</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputName" name="inputName" placeholder="NÉV" ng-model="dayDetailsViewModel.NewReservation.EmployeeName" ng-readonly="!(dayDetailsViewModel.NewReservation.IsAdmin)" ng-keyup="autoCompleteEmployeeName()" required ng-maxlength="100">
-                            <div ng-messages="newReservationForm.inputName.$error">
-                                <div ng-message="required" class="text-danger">A 'NÉV' KITÖLTÉSE KÖTELEZŐ!</div>
-                                <div ng-message="maxlength" class="text-danger">A 'NÉV' TÚL HOSSZÚ!</div>
-                            </div>
-                            <div ng-messages="newReservationForm.inputEmployeeId.$error">
-                                <div ng-message="required" class="text-danger">A 'NÉV'-BEN MEGADOTT SZEMÉLY NEM LÉTEZIK A RENDSZERBEN!</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputVehicle" class="col-sm-2 form-control-label">RENDSZÁM</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputVehicle" name="inputVehicle" placeholder="ABC-123" ng-model="dayDetailsViewModel.NewReservation.VehiclePlateNumber" required ng-pattern="vehiclePlateNumberFormat">
-                            <div ng-messages="newReservationForm.inputVehicle.$error">
-                                <div ng-message="required" class="text-danger">A 'RENDSZÁM' KITÖLTÉSE KÖTELEZŐ!</div>
-                                <div ng-message="pattern" class="text-danger">A 'RENDSZÁM' FORMÁTUMA NEM MEGFELELŐ!</div>
+            <div class="list-group-item" data-ng-repeat="item in dayDetailsViewModel.Reservations">
+                <button class="pull-right btn btn-primary btn-sm" ng-show="item.IsDeletable" ng-click="deleteReservation(item.ReservationId);"><span class="glyphicon glyphicon-trash"></span>&nbsp;TÖRÖL</button>
+                <strong>{{item.VehiclePlateNumber}}&nbsp;&nbsp;{{item.EmployeeName}}</strong><br />
+                {{item.SelectedServiceName}}<br />
+                {{item.Comment}}&nbsp;
+            </div>
+        </div>
+        <p ng-show="showReservation()">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <span class="glyphicon glyphicon-plus"></span>&nbsp;IDŐPONT FOGLALÁS
+            </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="list-group">
+                <div class="list-group-item">
+                    <form name="newReservationForm">
+                        <div class="form-group row hidden">
+                            <label for="inputEmployeeId" class="col-sm-2 form-control-label">EmployeeId</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmployeeId" name="inputEmployeeId" placeholder="EmployeeId" ng-model="dayDetailsViewModel.NewReservation.EmployeeId" ng-readonly="true" required>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2">SZOLGÁLTATÁS</label>
-                        <div class="col-sm-10">
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="gridRadios" id="gridRadios1" value="0" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
-                                    KÜLSŐ MOSÁS
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="gridRadios" id="gridRadios2" value="1" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
-                                    BELSŐ TAKARÍTÁS
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="gridRadios" id="gridRadios3" value="2" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
-                                    KÜLSŐ MOSÁS + BELSŐ TAKARÍTÁS
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="gridRadios" id="gridRadios4" value="3" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId" ng-disabled="kulsoBelsoKarpitDisabled()">
-                                    KÜLSŐ MOSÁS + BELSŐ TAKARÍTÁS + KÁRPITTISZTÍTÁS
-                                </label>
-                            </div>
-                            <div ng-messages="newReservationForm.gridRadios.$error">
-                                <div ng-message="required" class="text-danger">A 'SZOLGÁLTATÁS' KITÖLTÉSE KÖTELEZŐ!</div>
+                        <div class="form-group row">
+                            <label for="inputName" class="col-sm-2 form-control-label">NÉV</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputName" name="inputName" placeholder="NÉV" ng-model="dayDetailsViewModel.NewReservation.EmployeeName" ng-readonly="!(dayDetailsViewModel.NewReservation.IsAdmin)" ng-keyup="autoCompleteEmployeeName()" required ng-maxlength="100">
+                                <div ng-messages="newReservationForm.inputName.$error">
+                                    <div ng-message="required" class="text-danger">A 'NÉV' KITÖLTÉSE KÖTELEZŐ!</div>
+                                    <div ng-message="maxlength" class="text-danger">A 'NÉV' TÚL HOSSZÚ!</div>
+                                </div>
+                                <div ng-messages="newReservationForm.inputEmployeeId.$error">
+                                    <div ng-message="required" class="text-danger">A 'NÉV'-BEN MEGADOTT SZEMÉLY NEM LÉTEZIK A RENDSZERBEN!</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputComment" class="col-sm-2 form-control-label">MEGJEGYZÉS</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputComment" name="inputComment" placeholder="MEGJEGYZÉS" ng-model="dayDetailsViewModel.NewReservation.Comment" ng-maxlength="250">
-                            <div ng-messages="newReservationForm.inputComment.$error">
-                                <div ng-message="maxlength" class="text-danger">A 'MEGJEGYZÉS' TÚL HOSSZÚ!</div>
+                        <div class="form-group row">
+                            <label for="inputVehicle" class="col-sm-2 form-control-label">RENDSZÁM</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputVehicle" name="inputVehicle" placeholder="ABC-123" ng-model="dayDetailsViewModel.NewReservation.VehiclePlateNumber" required ng-pattern="vehiclePlateNumberFormat">
+                                <div ng-messages="newReservationForm.inputVehicle.$error">
+                                    <div ng-message="required" class="text-danger">A 'RENDSZÁM' KITÖLTÉSE KÖTELEZŐ!</div>
+                                    <div ng-message="pattern" class="text-danger">A 'RENDSZÁM' FORMÁTUMA NEM MEGFELELŐ!</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary" ng-click="saveReservation()" ng-disabled="newReservationForm.$invalid"><span class="glyphicon glyphicon-ok"></span>&nbsp;FOGLAL</button>
+                        <div class="form-group row">
+                            <label class="col-sm-2">SZOLGÁLTATÁS</label>
+                            <div class="col-sm-10">
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios1" value="0" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
+                                        KÜLSŐ MOSÁS
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios2" value="1" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
+                                        BELSŐ TAKARÍTÁS
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios3" value="2" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId">
+                                        KÜLSŐ MOSÁS + BELSŐ TAKARÍTÁS
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios4" value="3" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId" ng-disabled="kulsoBelsoKarpitDisabled()">
+                                        KÜLSŐ MOSÁS + BELSŐ TAKARÍTÁS + KÁRPITTISZTÍTÁS
+                                    </label>
+                                </div>
+                                <div ng-messages="newReservationForm.gridRadios.$error">
+                                    <div ng-message="required" class="text-danger">A 'SZOLGÁLTATÁS' KITÖLTÉSE KÖTELEZŐ!</div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                        <div class="form-group row">
+                            <label for="inputComment" class="col-sm-2 form-control-label">MEGJEGYZÉS</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputComment" name="inputComment" placeholder="MEGJEGYZÉS" ng-model="dayDetailsViewModel.NewReservation.Comment" ng-maxlength="250">
+                                <div ng-messages="newReservationForm.inputComment.$error">
+                                    <div ng-message="maxlength" class="text-danger">A 'MEGJEGYZÉS' TÚL HOSSZÚ!</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary" ng-click="saveReservation()" ng-disabled="newReservationForm.$invalid"><span class="glyphicon glyphicon-ok"></span>&nbsp;FOGLAL</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
