translate to English

--- a/src/MSHU.CarWash.Web/app/views/home.html
+++ b/src/MSHU.CarWash.Web/app/views/home.html
@@ -4,6 +4,6 @@
     <hr class="m-y-2">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" role="button" ng-click="showCalendar(0);">IDŐPONT FOGLALÁS</a>
+        <a class="btn btn-primary btn-lg" role="button" ng-click="showCalendar(0);">RESERVE</a>
     </p>
 </div>
