Update implemented for month switching.
Related Work Items: #99

--- a/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
@@ -81,7 +81,7 @@
 
         <!-- Master view -->
         <RelativePanel x:Name="relativePanelMaster" Grid.Column="0" Grid.Row="1">
-            <CalendarView HorizontalAlignment="Stretch" Margin="12,12,12,12" 
+            <controls:CWCalendarView HorizontalAlignment="Stretch" Margin="12,12,12,12" 
                           VerticalAlignment="Stretch" x:Name="MainCalendarView"
                           DataContext="{Binding}"
                           CalendarViewDayItemStyle="{StaticResource CalendarViewDayItemStyle1}"
@@ -95,6 +95,8 @@
                           SelectedDatesChanged="CalendarView_SelectedDatesChanged"
                           RelativePanel.AlignLeftWithPanel="True"
                           RelativePanel.AlignRightWithPanel="True"
+                          PreviousButtonCommand="{Binding PreviousPeriodCommand}"
+                          NextButtonCommand="{Binding NextPeriodCommand}"
                       />
         </RelativePanel>
 
