--- a/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
@@ -17,6 +17,7 @@
         <converters:InverseReferenceToVisibilityConverter x:Key="inverseRef2VisConverter" />
         <converters:ButtonsDisplayModeConverter x:Key="buttonsDisplayModeConverter" />
         <converters:InverseBooleanToVisibilityConverter x:Key="inverseBool2VisibilityConverter" />
+        <converters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
 
         <Style x:Key="CalendarViewDayItemStyle1" TargetType="CalendarViewDayItem">
             <Setter Property="MinWidth" Value="35"/>
@@ -133,11 +134,17 @@
                                                  DisplayMode="{Binding CurrentReservation, Converter={StaticResource buttonsDisplayModeConverter}}"
                                                  IsEnabled="{Binding IsEditable}"/>
 
-                <Button Grid.Row="2" Content="Create new reservation" Margin="12,0,12,12"
-                        Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
-                        Command="{Binding CreateReservationCommand}" IsEnabled="{Binding IsEditable}"
-                        Style="{StaticResource CWButtonStyle}"/>
-
+                <RelativePanel Grid.Row="2" Margin="12,0,12,12"
+                               Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}">
+                    <TextBlock Text="{Binding Feedback}" Name="FeedbackTextBlock"
+                               Visibility="{Binding Feedback, Converter={StaticResource stringToVisibilityConverter}}"/>
+                    <Button Content="Create new reservation" RelativePanel.Below="FeedbackTextBlock"
+                            Margin="0,12,0,0"
+                            Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
+                            Command="{Binding CreateReservationCommand}"
+                            Style="{StaticResource CWButtonStyle}"/>
+                </RelativePanel>
+                
             </Grid>
         </RelativePanel>
 
