--- a/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
@@ -18,6 +18,7 @@
         <converters:ButtonsDisplayModeConverter x:Key="buttonsDisplayModeConverter" />
         <converters:InverseBooleanToVisibilityConverter x:Key="inverseBool2VisibilityConverter" />
         <converters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
+        <converters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
 
         <Style x:Key="CalendarViewDayItemStyle1" TargetType="CalendarViewDayItem">
             <Setter Property="MinWidth" Value="35"/>
@@ -140,7 +141,7 @@
                                Visibility="{Binding Feedback, Converter={StaticResource stringToVisibilityConverter}}"/>
                     <Button Content="Create new reservation" RelativePanel.Below="FeedbackTextBlock"
                             Margin="0,12,0,0"
-                            Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
+                            Visibility="{Binding Path=CanCreateNewReservation, Converter={StaticResource booleanToVisibilityConverter}}"
                             Command="{Binding CreateReservationCommand}"
                             Style="{StaticResource CWButtonStyle}"/>
                 </RelativePanel>
