Added support for steam wash to web app
Related Work Items: #154

--- a/src/MSHU.CarWash.Web/app/views/day.html
+++ b/src/MSHU.CarWash.Web/app/views/day.html
@@ -88,6 +88,24 @@
                                         EXTERIOR + INTERIOR + CARPET
                                     </label>
                                 </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios4" value="4" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId" ng-disabled="steamDisabled()">
+                                        EXTERIOR (STEAM)
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios4" value="5" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId" ng-disabled="steamDisabled()">
+                                        INTERIOR (STEAM)
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" name="gridRadios" id="gridRadios4" value="6" ng-model="dayDetailsViewModel.NewReservation.SelectedServiceId" ng-required="!dayDetailsViewModel.NewReservation.SelectedServiceId" ng-disabled="steamDisabled()">
+                                        EXTERIOR + INTERIOR (STEAM)
+                                    </label>
+                                </div>
                                 <div ng-messages="newReservationForm.gridRadios.$error">
                                     <div ng-message="required" class="text-danger">THE FIELD IS REQUIRED</div>
                                 </div>
