New 'modify' button added with corresponding functionality.
Related Work Items: #171

--- a/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/ReservationsPage.xaml
@@ -137,6 +137,7 @@
                                                  SaveCommand="{Binding SaveReservationChangesCommand}"
                                                  CancelCommand="{Binding CancelReservationChangesCommand}"
                                                  DeleteCommand="{Binding DeleteReservationCommand}"
+                                                 UpdateCommand="{Binding UpdateReservationCommand}"
                                                  DisplayMode="{Binding CurrentReservation, Converter={StaticResource buttonsDisplayModeConverter}}"
                                                  IsEnabled="{Binding IsEditable}"/>
 
