--- a/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
+++ b/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
@@ -38,7 +38,7 @@
         <ComboBox ItemsSource="{Binding ServicesSource.View, Mode=TwoWay}" HorizontalAlignment="Stretch" Margin="8,4,8,4"
                   Grid.Row="1" Grid.Column="1" DisplayMemberPath="ServiceName" SelectedValuePath="ServiceId" />
         <TextBlock Text="Comment:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" />
-        <TextBox Text="{Binding CurrentComment, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" />
+        <TextBox Text="{Binding CurrentReservation.Comment, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" />
         <RelativePanel Grid.Row="3" Grid.Column="1" >
             <Button Content="Cancel" x:Name="CancelButton" Command="{Binding CancelCommand, ElementName=viewControl}"
                     RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"
@@ -49,6 +49,9 @@
             <Button Content="Delete" x:Name="DeleteButton"
                     Command="{Binding DeleteCommand, ElementName=viewControl}"  Style="{StaticResource CWButtonStyle}"
                     RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"/>
+            <Button Content="Update" x:Name="UpdateButton" RelativePanel.LeftOf="DeleteButton" 
+                    Margin="0,4,8,4" Padding="32,4,32,4"
+                    Command="{Binding UpdateCommand, ElementName=viewControl}" Style="{StaticResource CWButtonStyle}"/>
         </RelativePanel>
     </Grid>
 </UserControl>
